Changelog

$Id: Changes,v 1.82 2011-03-26 05:08:16 oops Exp $

* Sat, Mar 26 2011
	- changed function declare of str2double api
	- support GCC4 and FreeBSD
	- remove addslashes_r api
	- changed _hex2bin to internal function
	- rename check_int to is_strint
	
* Fri, Mar 25 2011
	- add join() api
	- fixed wrong realpath_r() operation
	- changed function declare of is_ksc5601 api
	- remove convert_punycode_r api
	- changed function declare of convert_punycode api

* Thu, Mar 24 2011
	- changed internal variable name for conflict other programs
	- add file_status() api

* Wed, Mar 23 2011
	- removed fileread api. use readfile api
	- readfile and writefile api are binary safe. (changed proto type)
    - On append mode of writefile api, don't add newline any more at first.

* Tue, Mar 22 2011
	- redefine type declare with stdint

* Mon, Mar 21 2011
	- start 1.0 branch
