@@ -1,1 +1,0 @@
-.so man3/human_size.3
