@@ -1,6 +1,9 @@
 Changelog
 
-$Id: Changes,v 1.82 2011-03-26 05:08:16 oops Exp $
+$Id: Changes,v 1.83 2011-03-26 19:39:41 oops Exp $
+
+* Sun, Mar 27 2011
+	- removed human_size_r
 
 * Sat, Mar 26 2011
 	- changed function declare of str2double api
